# mini-gmp-plus-plus

./: .gitignore  AGENTS.md  BigInt.hpp  CMakeLists.txt  CMakePresets.json  EXTENDED_TESTS_DOCUMENTATION.md  MiniMPF.hpp  MiniMPZ.hpp  MiniMPZ_README.md  PLAN.md  README.md  SIMD_COMPATIBILITY_TEST_RESULTS.md  VCPKG_INTEGRATION.md  bitops64.h  mini-gmp-plus-Changelog  mini-gmp-plus-config.cmake.in  mini-gmp-plus-config.hpp  mini-gmp-simd.cpp  mini-gmp.c  mini-gmp.h  portfile.cmake  todos.db  usage  vcpkg.json
.agents/: main.yaml
.agents/agents/: blueprint-mode.md  context-architect.md  cpp-expert.md  critical-review.md  debug-mode.md
.agents/commands/: code-review.md  update-docs.md
.agents/context/: cmake-vcpkg.md  cpp-tools.md  github-actions.md  oop-patterns.md  project.md
.github/: copilot-instructions.md
.github/workflows/: benchmark.yml  build.yml
.sisyphus/run-continuation/: ses_1c3976fc6ffeZuCnjCygaNjIXe.json
benchmarks/: benchmark_geometry.cpp
test_simd_compatibility/: CMakeLists.txt
tests/: CMakeLists.txt  debug_simd_test.cpp  geometry_workloads.hpp  test_BigInt.cpp  test_MiniMPF.cpp  test_MiniMPF_stress.cpp  test_MiniMPZ.cpp  test_nonsimd_wrappers.c  test_nonsimd_wrappers.h  test_simd_compatibility.cpp  testutils.c
